--- a/History_and_Evolution_of_the_Browser/main.tex
+++ b/History_and_Evolution_of_the_Browser/main.tex
@@ -35,7 +35,7 @@ Universitätsstraße 38, 70569 Stuttgart, Germany}
 		\subsection{Mosaic}
 		In January 1993 \textit{Mosaic} was published for free and its distribution numbers skyrocketed. Marc Andreessen and Eric Bina, the developers of the \textit{Mosaic} browser, constructed the browser with the intention that a broader audience could use the World Wide Web. That was only possible when the team of NCSA engineers would make their browser accessable for other systems than Unix. Andreessen and Bina, together with some of their NCSA associates, worked on the versions for Mac and PC which came out in late spring of the same year. With this the user numbers of \textit{Mosaic} rose even higher, with 5000 downloads per month. After the graduation of Marc Andreessen and Eric Bina, they met James H. Clark, the founder of Silicon Graphics, and discussed how to make the Web commercialisable. That set the starting point for a new Browser called \textit{Netscape}. Therefore Andreessen and Bina left NCSA, with some of their colleagues, in 1994 and settled down in Silicon Valley. After the 2 left the NCSA assigned all commercial rights for \textit{Mosaic} to Spyglass, Inc. Spyglass licensed their technology to many other companies, including Microsoft. In the year 1997 the NCSA discontinued the support for the \textit{Mosaic}, shifting their research focus to other developments projects. The last release for the \textit{Mosaic} browser dates back to August 1997 [2].
 		\subsection{Netscape}
-		\textit{Netscape} marks the beginning of many important events, that shaped the idea of the browser we know today. The first version of the browser was launched in October 1994 and was programmed by the NCSA team of Andreessen and Bina, that they acquired. In the beginning the team was not sure how to earn money with their browser, but later on, their browser marked the end of research-project status of the Web and started the era of the Web of commercial interest and exploitation. The Browser also invented the cookie feature, which lets the browser save data, and the Secure Socket Layer (SSL), which protects the privacy and integrity of transactions. The first browser was the \textit{Mosaic Netscape} release 0.9. Because of problems with the name, the company adapted the name \textit{Netscape Communications} and launched by the end of December the \textit{Netscape Navigator 1.0}, what furthermore solved the problem with the name conflict regarding the NCSA Mosaic browser [3].
+		\textit{Netscape} marks the beginning of many important events, which shaped the idea of the browser that are known today. The first version of the browser was launched in October 1994 and was programmed by the NCSA team of Andreessen and Bina, that they acquired. In the beginning the team was not sure how to earn money with their browser, but later on, their browser marked the end of research-project status of the Web and started the era of the Web of commercial interest and exploitation. The Browser also invented the cookie feature, which lets the browser save data, and the Secure Socket Layer (SSL), which protects the privacy and integrity of transactions. The first browser was the \textit{Mosaic Netscape} release 0.9. Because of problems with the name, the company adapted the name \textit{Netscape Communications} and launched by the end of December the \textit{Netscape Navigator 1.0}, what furthermore solved the problem with the name conflict regarding the NCSA Mosaic browser [3].
 		\\Because of the few competitors in the field of browsers, \textit{Netscape} became the most popular browser in a short time. The main income for the company was through B2B-business and the stock markets. Especially the stock markets were lucrative, because on the first day (August 9th, 1995) their stock price rose from 28\$ per share to a high of 74.75\$ and at the end of the day they closed off with 58.25\$ [4]. That was a good omen and it didn't end there; yet. They rose in popularity, until Microsoft started competing in the Web sector. Throught the competition of Microsoft Netscape Communications started improving their browser with rapid speed, which started the first browser wars [5].
 		%TODO what=which because "The pronoun which must be used instead of what because it introduces a nonessential clause."
 		\subsection{Internet Explorer}
@@ -43,13 +43,14 @@ Universitätsstraße 38, 70569 Stuttgart, Germany}
 		\subsection{Mozilla Firefox}
 		\textit{Mozilla Firefox}, originally called Phoenix or Firebird, is the unoffical offspring of Netscape created in the year 1998. The first version of Firefox, Firefox 1.0, was released on 9 November 2004. Shortly before the release of the first full version Mozilla gained a bunch of new users, because of the warning from the US goverment against the exploit in IE. Firefox and its predecessor were created on the bases of the Netscape source code, which was published on 31 March 1998 in the attempt of Netscape Communications to get more programmers that could improve the code and help defeat Microsoft in the \textbf{Browser Wars}. Unfortunately that was not enough to save Netscape. But it does not mean that Mozilla Firefox was going down with Netscape. The reason behind this was because \textit{Mozilla Firefox} had already its standalone browser, with a big community and enough  programmers  to keep working on the browser [7] [8]. Another reason is the browser was back financially by many investors and the Mozilla Corpration, which was founded as a totally owned branch of the Mozilla Foundation. Nowadays Firefox is still fairly popular browser with 6-8, even while Safari and Google Chrome have a bigger market share.
 		\subsection{Opera}
-		\textit{Opera} is one of the oldest browsers we have nowadays, next to IE. \textit{Opera 1.0} was first released in the year 1995. It was not as widely used as Netscape or IE, but it gained popularity with time. The intention was to build a fast browser on any system. That is why it was build from scratch and not based on the Mosaic code (like IE and Netscape). But \textit{Opera} gained enough popularity with version 2.1, which was in the on 9 December 1996 and introduced feateures like keyboard shortcuts, zoom and sessions [9].
+		\textit{Opera} is one of the oldest browsers at present, next to IE. \textit{Opera 1.0} was first released in the year 1995. It was not as widely used as Netscape or IE, but it gained popularity with time. The intention was to build a fast browser on any system. That is why it was build from scratch and not based on the Mosaic code (like IE and Netscape). But \textit{Opera} gained enough popularity with version 2.1, which was in the on 9 December 1996 and introduced features like keyboard shortcuts, zoom and sessions [9].
 		\subsection{Safari}
-		\textit{Safari} is a browser exclusivly developed for iOS, which was released January 7th, 2003. Initially it was published on Mac desktop systems, later on version 3,4 and 5 it was also published on Windows, but after the 5th version the Windows edition was not further supported. The browser was released for the mobile devices of Apple Inc. in the year 2007. Safari was a pioneer in the browser segment, especially in the early years, but now it is failing to keep with its competitors. Since then the quality decreased from browser version to browser version, compared to its contestant. Currently we have the version 12.1 of the browser for all iOS systems [10].
+		\textit{Safari} is a browser exclusively developed for iOS, which was released January 7th, 2003. Initially it was published on Mac desktop systems, later on version 3,4 and 5 it was also published on Windows, but after the 5th version the Windows edition was not further supported. The browser was released for the mobile devices of Apple Inc. in the year 2007. Safari was a pioneer in the browser segment, especially in the early years, but now it is strugglin to keep with its competitors. Since then the quality decreased from browser version to browser version, compared to its contestant. The most recent version is 12.1 of the browser for all iOS systems.[10]
 		\subsection{Google Chrome}
-		It was rumored in 2004 that Google was working on a browser, but the development only began in the year 2006. The reason why Google wanted to do their own browser, was because the other options at this time were not that satisfying. The first version was released in 2008 and gained immense popularity. In the year 2012 even surpassed IE in the market share race and since then is dominating the 2nd browser wars and is slowly winning as well. Google also developed an engine for browsers called Chromium, which many browser competitors slowly start using for their own browsers [11].
+		It was rumored in 2004 that Google was working on a browser, but the development only began in the year 2006. The reason why Google wanted to develop their own browser, was because the other options at this time were not that satisfying. The first version was released in 2008 and gained immense popularity. In the year 2012 even surpassed IE in the market share race and since then is dominating the 2nd browser wars and is slowly winning as well. Google furthermore developed an engine for browsers called Chromium, which many browser competitors slowly start using for their own browsers.[11]
 		\subsection{Tor Browser}
-		The \textit{Tor Browser} is a browser with one goal: internet user should have access to an uncensored web, without being tracked by anyone. Tor stands for "The Onion Routing", the technology that fuels the \textit{Tor Browser}. October 2002 the Tor network was deployed but no browser to access it, so people without technology experience were not able to access the network. The work on the \textit{Tor Browser} started in 2008 to help those without the knowledge to do so before. The browser was later on tool to many political movements, like the Arabic Spring in 2010, and popularity after Snowden's revelations in 2013. [12]
+		The \textit{Tor Browser} is a browser with one goal: internet user should have access to an uncensored web, without being tracked by anyone. Tor stands for "The Onion Routing", the technology that fuels the \textit{Tor Browser}. October 2002 the Tor network was deployed but no browser to access it, so people without technology experience were unable to access the network. The work on the \textit{Tor Browser} started in 2008 to help those without the knowledge to do so before. The browser was later on tool to many political movements, like the Arabic Spring in 2010, and popularity after Snowden's revelations in 2013. [12]
+		%No browser able to access it? You mean to download?
 		\subsection{Timeline of all browsers}	\includegraphics[scale=0.7]{TimelineOfWebBrowsers.png}
 			\begin{center}
 				\textit{\textbf{A timeline of all browsers and browser versions ever made. [13]}}\\
@@ -61,7 +62,7 @@ Universitätsstraße 38, 70569 Stuttgart, Germany}
 		\end{center}
 		
 		\subsection{Browser nowadays}
-		Today Google Chrome dominates the browser market, with roughly 60\%-65\%. Next up is Mozilla Firefox according to the data, with 5\%-8\%. After that we have Internet Explorer and its successor Microsoft Edge, both with around 5\%-7\%. Every other browser has less than 5\% market share. Another fact to mention is that most browser use Chromium, the browser engine of Google, including Opera, Microsoft Edge and other browsers. The only widely used browsers that don't use Chromium are Mozilla Firefox and Safari.\\
+		Today Google Chrome dominates the browser market, with roughly 60\%-65\%. Next up is Mozilla Firefox according to the data, with 5\%-8\%. After that comes  Internet Explorer and its successor Microsoft Edge, both with around 5\%-7\%. Every other browser has less than 5\% market share. Another fact to mention is that most browser use Chromium, the browser engine of Google, including Opera, Microsoft Edge and other browsers. The only widely used browsers that don't use Chromium are Mozilla Firefox and Safari.\\
 		\includegraphics[scale=0.3]{meta-chart.jpeg}\\
 		\begin{center}
 			\textit{\textbf{The market share value of the different browsers from June 2019. [15]}}
@@ -69,33 +70,33 @@ Universitätsstraße 38, 70569 Stuttgart, Germany}
 		
 	\section{Evolution}
 		\subsection{The meaning of Evolution}
-		With every new browser and browser version being released features and improvment have been added. Browsers became more secure, user and developer friendly, and more efficient. These were implemented because of new technologies, bugs being discovered and in trying to run out the competition. If you add all of the changes to a timeline you can overview the Evolution of the browser.
+		With every new browser and browser version being released, features and improvements have been added. Browsers became more secure, user and developer friendly, and more efficient. These were implemented because of new technologies, bugs being discovered and in trying to run out the competition. All these changes included into a timeline create the Evolution of the Browser.
 			\subsection{Basic Technological Changes}
 		\subsubsection{HTTP}
 		\leavevmode\newline
-		\textit{HTTP} stands for HyperText Transfer Protocol. It is an aplication-level, request-reply protocol which is typically transported by a lower-level protocol, like TCP. It works like follows: if the client requests a ressource, the server replys with information and sometime even the ressource itself [16]. Today one differenciates between HTTP and HTTPs, where HTTPs means HyperText Transfer Protocol secure because the HTTP is acompanied by a SSL encryption.
+		\textit{HTTP} stands for HyperText Transfer Protocol. It is an application-level, request-reply protocol which is typically transported by a lower-level protocol, like TCP. It works like follows: If the client requests a resource, the server replys with information and sometime even with the resource itself [16]. Today one differentiate between HTTP and HTTPs, where HTTPs means HyperText Transfer Protocol secure because the HTTP is accompanied by an SSL encryption.
 		\subsubsection{HTML}
 		\leavevmode\newline
 		\textit{HTML} is the abbreviation for HyperText Markup Language. Tim Berners-Lee made this textual format for annotating plain text with informations part of his original Web proposal, and created the first editor and at the same time the first browser around HTML. The first proposal for HTML is dated back to 1993, but today HTML 5 exists; which was standardized in 2014. [16]
 		\subsubsection{URL}
 		\leavevmode\newline
-		\textit{URL} is the short form for Uniform Resource Locator. The \textit{URL} gives the address where specific ressources are located in the Internet and the protocol to access it. The URL contains furthermore the port number to access the address, the location of the resource in the server and a fragment identifier [17]. The \textit{URL} is also one part of the original proposal of the Web from Tim Berners-Lee. 
+		\textit{URL} is the short form for Uniform Resource Locator. The \textit{URL} gives the address where specific resources are located in the Internet and the protocol to access it. The URL contains, furthermore, the port number to access the address, the location of the resource in the server and a fragment identifier [17]. The \textit{URL} is also one part of the initial proposal of the Web from Tim Berners-Lee. 
 		%TODO: Move to another location?
 		\subsubsection{Browser Engines}
 		\leavevmode\newline
-		The browser engine, also called "layout engine" or "rendering engine", is the core component of most major web browsers. The job of a browser engine ist the transformation of HTML files and other required resources to an interactive web page. While it is possible to separate the engine for the layout and the rendering of the page, in practice they are mostly coupled and not seperated. The browser engine is also responsible for enforcing the web pages security policy and creating the DOM data structure used in scripts. It is also responsible for handling hyperlinks and web forms.
+		The browser engine, also called "layout engine" or "rendering engine", is the core component of most major web browsers. The job of a browser engine is the transformation of HTML files and other required resources to an interactive web page. While it is possible to separate the engine for the layout and the rendering of the page, in practice they are mostly coupled and not separated. The browser engine is equally responsible for enforcing the web pages security policy and creating the DOM data structure used in scripts. It is also responsible for handling hyperlinks and web forms.
 		Browser engines may also be reused in other application. An email client, for example, may use such an engine for rendering HTML emails. Another example is the "Electron Framework", which uses the engine of \textit{Google Chrome}, used to create many applications. The layout to be rendered is specified by the CSS file of the web page. There are several different browser engine implementations and the most major web browsers use their own browser engine. Examples are Gecko by Mozilla, WebKit by Apple and Blink by Google. Microsoft used to have their own browser engines Trident and EdgeHTML, but use Googles Blink browser engine now.[18]
 		
 		\subsection{How Patches influenced Browsers}
-			\begin{quote}``I call such changes patches, as they are attempts to fix the original design of the web'' Marco Aiello The Web was Done by Amateurs S. 65 \end{quote}
-		By changing the Web, patches also influenced browsers when they were introduced. In this chapter we will have a short summary of what these patches were and how browsers evolved and adpaped through these changes.
+			\begin{quote}``I call such changes patches, as they are attempts to fix the original design of the web'' Marco Aiello The Web was Done by Amateurs page 65 \end{quote}
+		By changing the Web, patches also influenced browsers when they were introduced. Following shows a summary of what these patches were and how browsers evolved and adapted through these changes.
 			\subsubsection{Cookies}
 			\leavevmode\newline
-			Like mentioned before Cookies were introduced with Netscape in 1994 for websites to be able to save data to be remembered for processes on the clients side. The original idea The webbrowser is being used by the server of the website to save textinformation on the Computer of the client. These have made it possible to save login and shopping cart informations but also made Webtracking possible. Later they received critizism for being able to damage the users privacy and threadening security when surfing the web. Under the EU's GDPR Law websites are now forced now ask and inform users about saving data in their Browser.[16]
+			Like mentioned before Cookies were introduced with Netscape in 1994 for websites to be able to save data to be remembered for processes on the clients side. The web-browser is being used by the server of the website to save text information on the Computer of the client. These have made it possible to save login and shopping cart informations but as well made webtracking possible. Later they received criticism for being able to damage the users privacy and threatening security when surfing the web. Under the EU's GDPR Law websites are now forced, now ask and inform users about saving data in their Browser.[16]
 			\subsubsection{SSL}
 			\leavevmode\newline
-			SSL is the short form for Secure Sockets Layers, which was an introduction of an security system in the Web. One could say that SSL is an application layer based security protocol but that is not entirely true. It actually is used in the session layer which is above the transport layer and beneath the application layer [19]. It was introduced by Netscape and shaped the security protocols we use nowadays. SSL had many flaws that were corrected by its successors TSL, thats why the latest version was deprecated in the year 2015.
-			
+			SSL is short for Secure Sockets Layers, which was an introduction of a security system in the Web. One could say SSL is an application layer based security protocol but that is not entirely true. It actually is used in the session layer which is above the transport layer and beneath the application layer [19]. It was introduced by Netscape and shaped the security protocols we use nowadays. SSL had many flaws that were corrected by its successors TSL, thats why the latest version was deprecated in the year 2015.
+			%One could say that...Maybe erase that out or say "A often missconsumption is.."
 			\subsubsection{Java}
 			\leavevmode\newline
 			In the year 1995, Sun Microsystems published the object-oriented programming language \textit{Java}, inspired by James Gosling. \textit{Java}, formerly called Oak, is able to run on every computer. This is made possible by the Java Virtual Machine, which takes the standard bytecode instructions of the Java program and interpretes it. The only problem is that the JVM is not uniformly implemented across all hardware vendors. The combination of Java and the Web is only possible if the JVM is available to browser on the client side. The Java code is send with the the Web page, where this code is known as Applet. When the browser hits the point where the code should be run, it starts an instance of the JVM and gives it the bytecodes for the execution. [16]
